objects/Shift_Task_Event__c.object
<CustomObject>
    <description>Audit trail of task changes.</description>
    <fields>
        <fullName>From_Owner_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shift_Task_Events_From</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Status__c</fullName>
        <label>From Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Owner_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Owner Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Status_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Status Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occurred_At__c</fullName>
        <label>Occurred At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <label>Task</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Owner_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shift_Task_Events_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Status__c</fullName>
        <label>To Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shift Task Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Shift Task Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shift Task Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>